--- a/frontend/src/sass/layout/_main.scss
+++ b/frontend/src/sass/layout/_main.scss
@@ -1,3 +1,5 @@
 main {
-    background: url('../assets/images/pattern.png') repeat top left;
+    /* main styling */
+    width: 100%;
+    height: 100%;
 }
