added map marker modules

--- a/frontend/src/html/includes/_base/footer.html
+++ b/frontend/src/html/includes/_base/footer.html
@@ -1,4 +1,7 @@
-		
+	
+	<!-- google maps -->
+	<script src="https://maps.googleapis.com/maps/api/js"></script>
+	
 	<!-- build:css js/scripts.min.js -->
 	<script src="js/main.js"></script>
 
