--- a/frontend/src/sass/core/_base.scss
+++ b/frontend/src/sass/core/_base.scss
@@ -37,3 +37,19 @@ iframe {
     border: 0;
     display: block;
 }
+
+.test {
+    background-color: tomato !important;
+    color: green;
+}
+.infowindow {
+    background-color: lime !important;
+    color: green;
+}
+.gm-content {
+    display: none;
+}
+.marker {
+    fill: green;
+}
+
