--- a/frontend/src/html/includes/content/infobox.html
+++ b/frontend/src/html/includes/content/infobox.html
@@ -1,5 +1,9 @@
 <div class="infobox">
 	
+	<div> 
+		<img src="./assets/images/sidebar-bg.png">
+	</div>
+
 	<div class="infobox__button-holder">
 		<a class="button">save destination</a>
 	</div>
