--- a/frontend/src/sass/elements/_buttons.scss
+++ b/frontend/src/sass/elements/_buttons.scss
@@ -11,7 +11,12 @@
 	position: relative;
 	text-decoration: none;
 	text-transform: $font-uppercase;
-	transition-property: all !important;
+	transition: all .3s;
 	text-align: center;
 	width: 100%;
+
+	&:hover {
+		background-color: $color-blue-light;
+	}
 }
+
