--- a/frontend/src/html/includes/_base/head.html
+++ b/frontend/src/html/includes/_base/head.html
@@ -12,6 +12,8 @@
 	<meta name="description" content="Minecraft en modemeisjes"/>
 	<meta name="keywords" content=""/>
 
+	<link href='https://fonts.googleapis.com/css?family=Karla:400,700' rel='stylesheet' type='text/css'>
+
 	<!-- build:css /css/styles.min.css -->
 	<link rel="stylesheet" href="css/styles.min.css"/>
 	<!-- endbuild -->
