--- a/frontend/src/html/includes/content/filters.html
+++ b/frontend/src/html/includes/content/filters.html
@@ -2,16 +2,25 @@
 		
 	<div class="filter__holder">
 		
+		<div class="filter__button-holder">
+			<a class="button"> show all saved items </a>
+		</div>
+
 		<div class="filter__item">
 			<h2>wifi</h2>
 			
 			<ul class="filter__item-options">
-				<li> 
+				<li class="active"> 
 					<span class="icon wifi"> @@include('./src/assets/images/icons/wifi.svg')</span>
-					<div class="filter__infobox">minimaal > 20mbps</div>
+					<div class="filter__infobox">fast > 20 mbps</div>
 				</li>
-				<li class="icon wifi">@@include('./src/assets/images/icons/wifi.svg')</li>
+				<li>
+					<span class="icon wifi wifi--xs">@@include('./src/assets/images/icons/wifi-sm.svg')</span>
+					<div class="filter__infobox">medium > 50 mbps</div>
+				</li>
 			</ul>
+			
+			<p>Click on the icons to filter destinations</p>
 
 		</div>
 
@@ -19,9 +28,20 @@
 			<h2>cost of living</h2>
 			
 			<ul class="filter__item-options">
-				<li class="icon euro">@@include('./src/assets/images/icons/euro.svg')</li>
-				<li class="icon euro">@@include('./src/assets/images/icons/euro.svg')</li>
-				<li class="icon euro">@@include('./src/assets/images/icons/euro.svg')</li>
+				<li>
+					<span class="icon euro euro--xs">@@include('./src/assets/images/icons/euro-xs.svg')</span>
+					<div class="filter__infobox">&euro;500 tot &euro;1500</div>
+				</li>
+
+				<li>
+					<span class="icon euro euro--sm">@@include('./src/assets/images/icons/euro-sm.svg')</span>
+					<div class="filter__infobox">&euro;1500 tot &euro;2000</div>
+				</li>
+
+				<li>
+					<span class="icon euro">@@include('./src/assets/images/icons/euro.svg')</span>
+					<div class="filter__infobox">&euro;2000 tot &euro;2500</div>
+				</li>
 			</ul>
 
 		</div>
@@ -30,15 +50,25 @@
 			<h2>weather</h2>
 			
 			<ul class="filter__item-options">
-				<li class="icon weather">@@include('./src/assets/images/icons/sun.svg')</li>
-				<li class="icon weather">@@include('./src/assets/images/icons/rain.svg')</li>
-				<li class="icon weather">@@include('./src/assets/images/icons/ice.svg')</li>
-				<li class="icon weather">@@include('./src/assets/images/icons/cloud.svg')</li>
+				<li>
+					<span class="icon weather">@@include('./src/assets/images/icons/sun.svg')</span>
+					<div class="filter__infobox">Warm klimaat</div>
+				</li>
+				<li class="icon weather">
+					<span class="icon weather">@@include('./src/assets/images/icons/rain.svg')</span>
+					<div class="filter__infobox">Regen klimaat</div>
+				</li>
+				<li class="icon weather">
+					<span class="icon weather">@@include('./src/assets/images/icons/ice.svg')</span>
+					<div class="filter__infobox">Koud klimaat</div>
+				</li>
+				<li class="icon weather">
+					<span class="icon weather">@@include('./src/assets/images/icons/cloud.svg')</span>
+					<div class="filter__infobox">Bewolkt klimaat</div>
+				</li>
 			</ul>
 
 		</div>
-
-		<p>Click on the icons to filer destinations</p>
 
 	</div>
 
