--- a/frontend/src/sass/_config.scss
+++ b/frontend/src/sass/_config.scss
@@ -25,7 +25,7 @@ $font-weight-extrabold: 800;
 $color-background: #2ecc71;
 $color-white: #ffffff;
 $color-gray-light: #979797;
-$color-gray: #737373;
+$color-gray: #d8d8d8;
 $color-gray-dark: #272727;
 $color-gray-darkest: #404040;
 $color-black: #000000;
@@ -35,7 +35,7 @@ $color-orange: #f7941c;
 $color-orange-dark: #dd841a;
 $color-green: #22c064;
 $color-green-dark: #1eac59;
-$color-blue-light: #88cce5;
+$color-blue-light: #515e6d;
 $color-blue: #263647;
 $color-blue-dark: #0e84af;
 $color-blue-darkest: #00769D;
@@ -43,6 +43,7 @@ $color-bluegray: #707f95;
 $color-bluegray-dark: #354a58;
 $color-bluegray-light: #c5c9d3;
 $color-yellow: #fdd301;
+$color-yellow-dark: #e0ba08;
 
 // Transforms
 $font-uppercase: uppercase;
