--- a/frontend/src/sass/core/_typography.scss
+++ b/frontend/src/sass/core/_typography.scss
@@ -1,5 +1,5 @@
 $font-family-open-sans: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$font-family-karla: 'Karla', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$font-family-karla: 'Karla', sans-serif;
 
 html, body, button {
 	-webkit-font-smoothing: antialiased; // http://www.intridea.com/blog/2014/5/8/better-font-smoothing-in-chrome-on-mac-os-x
@@ -28,7 +28,7 @@ html {
 
 h1, h2, h3, h4, h5, h6 {
 	font-weight: normal;
-	font-family: $font-family-open-sans;
+	font-family: $font-family-karla;
 	text-transform: $font-uppercase;
 }
 
