--- a/frontend/src/sass/modules/_filter.scss
+++ b/frontend/src/sass/modules/_filter.scss
@@ -2,7 +2,7 @@
 	background-color: $color-yellow;
 	box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.50);
 	overflow: hidden;
-	padding: 25px 40px;
+	padding: 20px 40px;
 	width: 100%;
 	z-index: 2;
 }
@@ -11,17 +11,33 @@
 		float: right;
 	}
 
-	.filter__item {
+	.filter__item, .filter__button-holder {
 		float: left;
 		margin-left: 40px;
-		margin-bottom: 10px;
+		position: relative;
 		
 		h2 {
-			margin-bottom: 15px;
+			margin-bottom: 10px;
 		}
 
 		&:first-child {
 			margin-left: 0px;
+		}
+
+		p {
+			top: 80px;
+			position: absolute;
+			width: 230px;
+		}
+
+	}
+
+	.filter__button-holder {
+		
+		margin-top: 30px;
+
+		.button {
+			padding: 10px;
 		}
 
 	}
@@ -32,26 +48,33 @@
 
 		li {
 			float: left;
+			margin-left: 10px;
+			margin-bottom: 30px;
 			position: relative;
 			
-			&:hover > .filter__infobox {
-				opacity: 1;
-				transform: translateY(0px);
+			&.active > .icon{
+				background-color: $color-yellow-dark;
 			}
 
-		}
+			&:first-child {
+				margin-left: 0;
+			}
+			
+			&:hover .filter__infobox {
+				opacity: 1;
+				transform: translateY(0px);
+				visibility: visible;
+			}
 
-		.icon:first-child {
-			margin-left: 0px;
 		}
 
 	}
 
 	.filter__infobox  {
-		background: $color-blue;
+		background: $color-gray;
 		border-radius: 4px;
-		bottom: -30px;
-		color: $color-white;
+		bottom: -40px;
+		color: $color-black;
 		font-size: $font-size-xs;
 		left: calc(50% - 65px);
 		min-width: 130px;
@@ -60,25 +83,27 @@
 		transform: translateY(10px);
 		transition: all .4s;
 		text-align: center;
+		visibility: hidden;
 		position: absolute;
 		z-index: 2;
+		
+		&:after, &:before {
+			bottom: 100%;
+			left: 50%;
+			border: solid transparent;
+			content: " ";
+			height: 0;
+			width: 0;
+			position: absolute;
+			pointer-events: none;
+		}
+
+		&:after {
+			border-bottom-color: $color-gray;
+			border-width: 7px;
+			margin-left: -7px;
+		}
 	}
 	
-	.filter__infobox:after, .filter__infobox:before {
-		bottom: 100%;
-		left: 50%;
-		border: solid transparent;
-		content: " ";
-		height: 0;
-		width: 0;
-		position: absolute;
-		pointer-events: none;
-	}
-
-	.filter__infobox:after {
-		border-bottom-color: $color-blue;
-		border-width: 7px;
-		margin-left: -7px;
-	}
 
 
