--- a/frontend/src/sass/modules/_infobox.scss
+++ b/frontend/src/sass/modules/_infobox.scss
@@ -6,10 +6,18 @@
 	bottom: 10px;
 	right: 40px;
 	top: 180px;
-	overflow: scroll;
+	overflow: hidden;
 	position: absolute;
 	width: 240px;
 	z-index: 2;
+
+	div:first-child {
+		height: 100%;
+		overflow: scroll;
+		text-align: center;
+		padding: 30px 0px;
+	}
+
 }
 
 	.infobox__item {
