--- a/frontend/src/sass/_config.scss
+++ b/frontend/src/sass/_config.scss
@@ -7,7 +7,7 @@ $font-folder: '/fonts/'; // Needed for font-face mixin
 
 $font-size-xs: 12px;
 $font-size-sm: 14px;
-$font-size-md: 1em;
+$font-size-md: 16px;
 $font-size-lg: 23px;
 $font-size-xl: 26px;
 $font-size-xxl: 32px;
