--- a/frontend/src/html/includes/_base/head.html
+++ b/frontend/src/html/includes/_base/head.html
@@ -13,6 +13,7 @@
 	<meta name="keywords" content=""/>
 
 	<link href='https://fonts.googleapis.com/css?family=Karla:400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Muli:400,300,300italic,400italic' rel='stylesheet' type='text/css'>
 
 	<!-- build:css /css/styles.min.css -->
 	<link rel="stylesheet" href="css/styles.min.css"/>
