--- a/frontend/src/sass/core/_typography.scss
+++ b/frontend/src/sass/core/_typography.scss
@@ -1,8 +1,8 @@
 $font-family-open-sans: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$font-family-karla: 'Karla', sans-serif;
+$font-family-karla: 'Muli', sans-serif;
 
 html, body, button {
-	-webkit-font-smoothing: antialiased; // http://www.intridea.com/blog/2014/5/8/better-font-smoothing-in-chrome-on-mac-os-x
+	// -webkit-font-smoothing: antialiased; // http://www.intridea.com/blog/2014/5/8/better-font-smoothing-in-chrome-on-mac-os-x
 	-moz-osx-font-smoothing: grayscale; // http://stackoverflow.com/questions/11459746/css3-/font-smoothing-and-antialiasing-in-firefox-and-opera
 }
 
@@ -12,10 +12,6 @@ html, body, button {
 	only screen and (min-device-pixel-ratio: 1.25),
 	only screen and (min-resolution: 200dpi),
 	only screen and (min-resolution: 1.25dppx) {
-
-	html, body, button {
-		-webkit-font-smoothing: subpixel-antialiased;
-	}
 }
 
 html {
@@ -29,6 +25,7 @@ html {
 h1, h2, h3, h4, h5, h6 {
 	font-weight: normal;
 	font-family: $font-family-karla;
+	letter-spacing: 1px;
 	text-transform: $font-uppercase;
 }
 
@@ -38,12 +35,12 @@ h1, .-h1 {
 }
 
 h2, .-h2 {
-	font-size: $font-size-sm;
+	font-size: $font-size-md;
 	font-weight: $font-weight-regular;
 }
 
 h3, .-h3 {
-	font-size: $font-size-xs;
+	font-size: $font-size-sm;
 	font-weight: $font-weight-regular;
 }
 
