--- a/frontend/src/sass/main.scss
+++ b/frontend/src/sass/main.scss
@@ -17,6 +17,7 @@
 // elements
 @import 'elements/buttons';
 @import 'elements/icons';
+@import 'elements/form';
 @import 'elements/modifiers';
 
 // layout elements
