--- a/frontend/src/html/includes/content/infobox.html
+++ b/frontend/src/html/includes/content/infobox.html
@@ -29,7 +29,7 @@
 				<div class="grid__row">
 					
 					<div class="grid__column-6">
-						<span class="icon icon--yellow">@@include('./src/assets/images/icons/euro.svg')</span>
+						<span class="icon icon--yellow -pdt-xs">@@include('./src/assets/images/icons/euro.svg')</span>
 					</div>
 					
 					<div class="grid__column-6 -mgt-sm -tx-right">
@@ -49,7 +49,7 @@
 				<div class="grid__row">
 					
 					<div class="grid__column-6">
-						<span class="icon icon--yellow">@@include('./src/assets/images/icons/yen.svg')</span>
+						<span class="icon icon--yellow -pdt-xs">@@include('./src/assets/images/icons/yen.svg')</span>
 					</div>
 					
 					<div class="grid__column-6 -mgt-sm -tx-right">
@@ -57,6 +57,36 @@
 					</div>
 
 				</div>	
+
+			</div>
+
+			<div class="infobox__item">
+					
+				<div class="infobox__title">
+					<span class="icon icon--yellow -pdt-xss">@@include('./src/assets/images/icons/key.svg')</span>
+					<h2>cost of living p.d</h2> 
+				</div>
+
+				<h3 class="-h4">hotel</h3>
+				<div class="infobox__bar">
+					<span>
+						<div>&euro; 50,-</div>
+					</span>
+				</div>
+
+				<h3 class="-h4 -mgt-md">apartement</h3>
+				<div class="infobox__bar">
+					<span>
+						<div>&euro; 50,-</div>
+					</span>
+				</div>
+
+				<h3 class="-h4 -mgt-md">airbnb</h3>
+				<div class="infobox__bar">
+					<span>
+						<div>&euro; 50,-</div>
+					</span>
+				</div>
 
 			</div>
 
