--- a/frontend/src/sass/_config.scss
+++ b/frontend/src/sass/_config.scss
@@ -44,6 +44,7 @@ $color-bluegray-dark: #354a58;
 $color-bluegray-light: #c5c9d3;
 $color-yellow: #fdd301;
 $color-yellow-dark: #e0ba08;
+$color-pink: #e85453;
 
 // Transforms
 $font-uppercase: uppercase;
