--- a/frontend/src/sass/elements/_modifiers.scss
+++ b/frontend/src/sass/elements/_modifiers.scss
@@ -99,6 +99,8 @@
 	padding-top: 48px;
 }
 
+.-pdt-xss { padding-top: 6px; }
+.-pdt-xs { padding-top: 10px; }
 .-pdt-sm { padding-top: 12px; }
 .-pdt-md { padding-top: 24px; }
 .-pdt-lg { padding-top: 36px; }
