--- a/frontend/src/sass/modules/_infobox.scss
+++ b/frontend/src/sass/modules/_infobox.scss
@@ -29,12 +29,8 @@
 
 	.infobox__item {
 		border-bottom: 2px solid $color-yellow-dark;
-		margin-bottom: 15px;
-		padding-bottom: 15px;
-
-		.icon svg {
-			margin-top: 10px;
-		}
+		margin-bottom: 20px;
+		padding-bottom: 20px;
 
 		h2 {
 			margin-bottom: 15px;
@@ -94,4 +90,50 @@
 		&:after {
 			content: "°C";
 		}
+	}
+
+	.infobox__title {
+		overflow: hidden;
+
+		.icon {
+			float: left;
+		}
+
+		h2 {
+			display: block;
+			float: left;
+			margin-left: 5%;
+			width: 75%;
+		}
+
+	}
+
+	.infobox__bar {
+		border: 2px solid $color-yellow-dark;
+		border-radius: 4px;
+		height: 23px;
+		margin-top: 6px;
+		position: relative;
+		width: 100%;
+
+		span {
+			background: $color-pink;
+			border-radius: 4px;
+			display: block;
+			height: 22px;
+			position: absolute;
+			top: -1px;
+			left: -1px;
+			width: 50%;
+		}
+
+		div {
+    		font-size: $font-size-xs;
+    		font-weight: bold;
+    		position: absolute;
+    		top: 4px;
+    		right: 5px;
+    		z-index: 999;
+		}
+
 	}
