--- a/frontend/src/html/includes/content/infobox.html
+++ b/frontend/src/html/includes/content/infobox.html
@@ -5,7 +5,7 @@
 		<div class="infobox__holder"> 
 
 			<div class="infobox__item infobox__item--center">
-				<h2>your current destination <span>Amsterdam</span></h2> 
+				<h2>your current location <span>Amsterdam</span></h2> 
 				
 				<div class="grid__row">
 					
@@ -23,7 +23,7 @@
 
 			</div>
 
-			<div class="infobox__item">
+			<div class="infobox__item range">
 				<h2>currency</h2> 
 				
 				<div class="grid__row">
@@ -33,7 +33,7 @@
 					</div>
 					
 					<div class="grid__column-6 -mgt-sm -tx-right">
-						<span class="">100,-</span>
+						<span class="begin-value">100,-</span>
 					</div>
 
 				</div>	
@@ -53,7 +53,7 @@
 					</div>
 					
 					<div class="grid__column-6 -mgt-sm -tx-right">
-						<span class="">2000,-</span>
+						<span class="end-value">2000,-</span>
 					</div>
 
 				</div>	
@@ -87,6 +87,73 @@
 						<div>&euro; 50,-</div>
 					</span>
 				</div>
+
+			</div>
+
+			<div class="infobox__item">
+					
+				<div class="infobox__title">
+					<span class="icon icon--yellow -pdt-xss">@@include('./src/assets/images/icons/speech.svg')</span>
+					<h2>colleagues in the city</h2> 
+				</div>
+
+				<div class="grid__row -tx-center">
+					
+					<div class="grid__column-6">
+						<h3 class="-h4">developers</h3>
+						<div class="chart" data-graph-percent="70" data-graph-color="#e85453"></div>
+					</div>
+					
+					<div class="grid__column-6">
+						<h3 class="-h4">designers</h3>
+						<div class="chart" data-graph-percent="30" data-graph-color="#e85453"></div>
+					</div>
+
+				</div>	
+
+			</div>
+
+			<div class="infobox__item">
+					
+				<div class="infobox__title">
+					<span class="icon icon--yellow -pdt-xs">@@include('./src/assets/images/icons/co-working.svg')</span>
+					<h2>co-working space</h2> 
+				</div>
+
+				<div class="grid__row">
+					
+					<div class="grid__column-12">
+						<ul class="infobox__list">
+							<li><a data-marker-id="">bounche</a></li>
+							<li><a data-marker-id="">mixed-up</a></li>
+							<li><a data-marker-id="">crowdyoffice</a></li>
+							<li><a data-marker-id="">meetberlarge</a></li>
+						</ul>
+					</div>
+
+				</div>	
+
+			</div>
+
+			<div class="infobox__item">
+					
+				<div class="infobox__title">
+					<span class="icon icon--yellow -pdt-xss">@@include('./src/assets/images/icons/work.svg')</span>
+					<h2 class="-mgt-sm">get work</h2> 
+				</div>
+
+				<div class="grid__row">
+					
+					<div class="grid__column-12">
+						<ul class="infobox__list">
+							<li><a href="http://www.monsterboard.nl" target="_blank">monsterboard</a></li>
+							<li><a href="http://jobs.smashingmagazine.com/" target="_blank">smashing magazine</a></li>
+							<li><a href="http://www.thefwa.com/jobs" target="_blank">the fwa</a></li>
+							<li><a href="https://jobs.github.com/" target="_blank">github</a></li>
+						</ul>
+					</div>
+
+				</div>	
 
 			</div>
 
