--- a/frontend/src/html/includes/content/overlayView.html
+++ b/frontend/src/html/includes/content/overlayView.html
@@ -9,7 +9,9 @@
 			<div class="info">
 				<p><span class="disc">WIFI</span> <span class="mbs">mbps</span> <span class="wifi"></span><img src="" class="wifi__icon"></p>
 				<p><span class="disc">COST P.M.</span> <span class="cost"></span><img src="../assets/images/icons/euro-sm.svg" class="euro__icon"></p>
+				<a class="button--info"> open window </a>
 			</div>
+
 		</div>
 	</section>	
 </template>
