--- a/frontend/src/sass/modules/_infobox.scss
+++ b/frontend/src/sass/modules/_infobox.scss
@@ -3,6 +3,8 @@
 	box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.50);
 	border-radius: 4px;
 	height: calc(100% - 210px);
+	font-size: $font-size-sm;
+	font-weight: $font-weight-semibold;
 	bottom: 10px;
 	right: 40px;
 	top: 180px;
@@ -32,6 +34,16 @@
 		margin-bottom: 20px;
 		padding-bottom: 20px;
 
+		&:first-child {
+			border: none;
+			padding-bottom: 0px;
+		}
+
+		&:last-child {
+			padding-bottom: 0px;
+			border: none;
+		}
+
 		h2 {
 			margin-bottom: 15px;
 		}
@@ -53,6 +65,7 @@
 		padding: 20px;
 		position: absolute;
 		width: 100%;
+		z-index: 5;
 	}
 
 	.infobox__icon {
@@ -72,7 +85,7 @@
 
 	.infobox__number {
 		display: block;
-		margin-top: -5px;
+		margin-top: -10px;
 		position: relative;
 
 		&[class*="--wifi"] {
@@ -94,6 +107,7 @@
 
 	.infobox__title {
 		overflow: hidden;
+		margin-bottom: 7px;
 
 		.icon {
 			float: left;
@@ -133,7 +147,34 @@
     		position: absolute;
     		top: 4px;
     		right: 5px;
-    		z-index: 999;
+    		z-index: 3;
 		}
 
+	}
+
+	.infobox__list {
+		list-style: none;
+		margin-top: -5px;
+		margin-left: 50px;
+
+		li {
+			margin-bottom: 5px;
+
+			&:last-child {
+				margin-bottom: 0px;
+			}
+		}
+
+		a {
+			cursor: pointer;
+			color: $color-black;
+			font-size: $font-size-xs;
+			text-transform: $font-uppercase;
+			text-decoration: none;
+			transition: color .3s; 
+
+			&:hover {
+				color: $color-pink;
+			}
+		}
 	}
