ready for merge

--- a/frontend/src/html/includes/content/overlayView.html
+++ b/frontend/src/html/includes/content/overlayView.html
@@ -13,3 +13,6 @@
 		</div>
 	</section>	
 </template>
+
+
+<svg width="198" height="137" viewBox="0 0 198 137" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><clipPath id="clipPath"><path d="M21 18v18L3 27l18-9zm0-11.998C21 3.792 22.787 2 24.998 2h164.004C191.21 2 193 3.8 193 6.002v120.996c0 2.21-1.787 4.002-3.998 4.002H24.998C22.79 131 21 129.2 21 126.998V6.002z"></path></clipPath></defs></svg>
