--- a/frontend/src/sass/modules/_overview.scss
+++ b/frontend/src/sass/modules/_overview.scss
@@ -66,12 +66,15 @@ $fontSize: 12px;
 			top: 0;
 			right: 0;
 			z-index: 500;
+			transition: .3s;
+			opacity: 0.5;
 
 			img {
 				padding: 7px;
 			}
 			&:hover {
 				cursor: pointer;
+				opacity: 1;
 			}
 		}
 
@@ -88,11 +91,18 @@ $fontSize: 12px;
 		text-align: center;
 		border-radius: 4px;
 		text-transform: uppercase;
-		font-weight: 600;
+		font-weight: 100;
 		line-height: 21px;
+		cursor: pointer;
 		
+		transition: all .3s;
 		background: $color-blue;
 		box-shadow: 0px 2px 4px rgba(0, 0, 0, 50);
+
+		&:hover {
+			box-shadow: 0px 1px 2px rgba(0, 0, 0, 50);
+			background-color: $color-blue-light;
+		}
 	}	
 
 	.info {
