made infobox module

--- a/frontend/src/html/includes/content/infobox.html
+++ b/frontend/src/html/includes/content/infobox.html
@@ -1,164 +1,1 @@
-<div data-peach-container="main">
-
-	<div class="infobox">
-		
-		<div class="infobox__holder"> 
-
-			<div class="infobox__item infobox__item--center">
-				<h2>your current location <span>Amsterdam</span></h2> 
-				
-				<div class="grid__row">
-					
-					<div class="grid__column-6">
-						<span class="infobox__icon">@@include('./src/assets/images/icons/wifi-animation.svg')</span>
-						<span class="infobox__number infobox__number--wifi">100</span>
-					</div>
-					
-					<div class="grid__column-6">
-						<span class="infobox__icon">@@include('./src/assets/images/icons/rain-animation.svg')</span>
-						<span class="infobox__number">16</span>
-					</div>
-
-				</div>	
-
-			</div>
-
-			<div class="infobox__item range">
-				<h2>currency</h2> 
-				
-				<div class="grid__row">
-					
-					<div class="grid__column-6">
-						<span class="icon icon--yellow -pdt-xs">@@include('./src/assets/images/icons/euro.svg')</span>
-					</div>
-					
-					<div class="grid__column-6 -mgt-sm -tx-right">
-						<span class="begin-value">100,-</span>
-					</div>
-
-				</div>	
-
-				<div class="grid__row -pdv-sm">
-					
-					<div class="grid__column-12">
-						<input min="1" max="200" value="100" type="range">
-					</div>
-
-				</div>	
-
-				<div class="grid__row">
-					
-					<div class="grid__column-6">
-						<span class="icon icon--yellow -pdt-xs">@@include('./src/assets/images/icons/yen.svg')</span>
-					</div>
-					
-					<div class="grid__column-6 -mgt-sm -tx-right">
-						<span class="end-value">2000,-</span>
-					</div>
-
-				</div>	
-
-			</div>
-
-			<div class="infobox__item">
-					
-				<div class="infobox__title">
-					<span class="icon icon--yellow -pdt-xss">@@include('./src/assets/images/icons/key.svg')</span>
-					<h2>cost of living p.d</h2> 
-				</div>
-
-				<h3 class="-h4">hotel</h3>
-				<div class="infobox__bar">
-					<span>
-						<div>&euro; 50,-</div>
-					</span>
-				</div>
-
-				<h3 class="-h4 -mgt-md">apartement</h3>
-				<div class="infobox__bar">
-					<span>
-						<div>&euro; 50,-</div>
-					</span>
-				</div>
-
-				<h3 class="-h4 -mgt-md">airbnb</h3>
-				<div class="infobox__bar">
-					<span>
-						<div>&euro; 50,-</div>
-					</span>
-				</div>
-
-			</div>
-
-			<div class="infobox__item">
-					
-				<div class="infobox__title">
-					<span class="icon icon--yellow -pdt-xss">@@include('./src/assets/images/icons/speech.svg')</span>
-					<h2>colleagues in the city</h2> 
-				</div>
-
-				<div class="grid__row -tx-center">
-					
-					<div class="grid__column-6">
-						<h3 class="-h4">developers</h3>
-						<div class="chart" data-graph-percent="70" data-graph-color="#e85453"></div>
-					</div>
-					
-					<div class="grid__column-6">
-						<h3 class="-h4">designers</h3>
-						<div class="chart" data-graph-percent="30" data-graph-color="#e85453"></div>
-					</div>
-
-				</div>	
-
-			</div>
-
-			<div class="infobox__item">
-					
-				<div class="infobox__title">
-					<span class="icon icon--yellow -pdt-xs">@@include('./src/assets/images/icons/co-working.svg')</span>
-					<h2>co-working space</h2> 
-				</div>
-
-				<div class="grid__row">
-					
-					<div class="grid__column-12">
-						<ul class="infobox__list">
-							<li><a data-marker-id="">bounche</a></li>
-							<li><a data-marker-id="">mixed-up</a></li>
-							<li><a data-marker-id="">crowdyoffice</a></li>
-							<li><a data-marker-id="">meetberlarge</a></li>
-						</ul>
-					</div>
-
-				</div>	
-
-			</div>
-
-			<div class="infobox__item">
-					
-				<div class="infobox__title">
-					<span class="icon icon--yellow -pdt-xss">@@include('./src/assets/images/icons/work.svg')</span>
-					<h2 class="-mgt-sm">get work</h2> 
-				</div>
-
-				<div class="grid__row">
-					
-					<div class="grid__column-12">
-						<ul class="infobox__list">
-							<li><a href="http://www.monsterboard.nl" target="_blank">monsterboard</a></li>
-							<li><a href="http://jobs.smashingmagazine.com/" target="_blank">smashing magazine</a></li>
-							<li><a href="http://www.thefwa.com/jobs" target="_blank">the fwa</a></li>
-							<li><a href="https://jobs.github.com/" target="_blank">github</a></li>
-						</ul>
-					</div>
-
-				</div>	
-
-			</div>
-
-		</div>
-
-	</div>
-
-</div>
+<div data-peach-container="main"></div>
