--- a/frontend/src/sass/elements/_buttons.scss
+++ b/frontend/src/sass/elements/_buttons.scss
@@ -6,7 +6,7 @@
 	cursor: pointer;
 	display: block;
 	font-size: $font-size-sm;
-	font-weight: $font-weight-semibold;
+	font-weight: 200;
 	padding: 10px 0px;
 	position: relative;
 	text-decoration: none;
