--- a/frontend/src/html/includes/content/overlayView.html
+++ b/frontend/src/html/includes/content/overlayView.html
@@ -23,3 +23,9 @@
 		<h1 class="title"></h1>
 	</section>	
 </template>
+
+<template class="overlayviewTempCo">
+	<section class="overlayviewCo">
+		<h1 class="titleCo"></h1>
+	</section>	
+</template>
