--- a/frontend/src/html/includes/templates/infobox-tmpl.html
+++ b/frontend/src/html/includes/templates/infobox-tmpl.html
@@ -65,11 +65,11 @@
 				
 				<div class="grid__column-6">
 					{% if( data.currency == 'dollar') { %}
-						<span class="icon icon--yellow -pdt-xs">@@include('./src/assets/images/icons/dollar.svg')</span>
+						<span class="icon icon--yellow -pdt-xss">@@include('./src/assets/images/icons/dollar.svg')</span>
 					{% } %}
 
 					{% if( data.currency == 'euro') { %}
-						<span class="icon icon--yellow -pdt-xs">@@include('./src/assets/images/icons/dollar.svg')</span>
+						<span class="icon icon--yellow -pdt-xss">@@include('./src/assets/images/icons/dollar.svg')</span>
 					{% } %}
 
 					{% if( data.currency == 'yen' ) { %}
@@ -259,11 +259,11 @@
 				
 				<div class="grid__column-6">
 					{% if( data.currency == 'dollar') { %}
-						<span class="icon icon--yellow -pdt-xs">@@include('./src/assets/images/icons/dollar.svg')</span>
+						<span class="icon icon--yellow -pdt-xss">@@include('./src/assets/images/icons/dollar.svg')</span>
 					{% } %}
 
 					{% if( data.currency == 'euro') { %}
-						<span class="icon icon--yellow -pdt-xs">@@include('./src/assets/images/icons/dollar.svg')</span>
+						<span class="icon icon--yellow -pdt-xss">@@include('./src/assets/images/icons/dollar.svg')</span>
 					{% } %}
 
 					{% if( data.currency == 'yen' ) { %}
