--- a/frontend/src/sass/modules/_infobox.scss
+++ b/frontend/src/sass/modules/_infobox.scss
@@ -7,11 +7,19 @@
 	font-weight: $font-weight-semibold;
 	bottom: 10px;
 	right: 40px;
-	top: 180px;
 	overflow: hidden;
+	opacity: 0;
 	position: absolute;
+	transform: scale(0.7);
+	transition: all 0.3s;
+	top: 180px;
 	width: 240px;
 	z-index: 2;
+
+	&.active {
+		opacity: 1;
+		transform: scale(1);
+	}
 
 	.infobox__holder {
 		height: 100%;
@@ -162,6 +170,10 @@
     
 		}
 
+	}
+
+	.infobox__slider {
+		
 	}
 
 	.infobox__list {
