--- a/frontend/src/sass/main.scss
+++ b/frontend/src/sass/main.scss
@@ -15,6 +15,7 @@
 @import 'modules/infobox';
 @import 'modules/overview';
 @import 'modules/overviewsmall';
+@import 'modules/overviewco';
 
 // elements
 @import 'elements/buttons';
