--- a/frontend/src/html/includes/templates/infobox-tmpl.html
+++ b/frontend/src/html/includes/templates/infobox-tmpl.html
@@ -95,6 +95,7 @@
 
 			<h3 class="-h4">hotel</h3>
 			<div class="infobox__bar hotel" data-cost="{{ data.hotel }}">
+				<div class="infobox__slider"><p>50,- </p></div>
 				<span>
 					<div>&euro; {{ data.hotel }},-</div>
 				</span>
@@ -102,6 +103,7 @@
 
 			<h3 class="-h4 -mgt-md">apartment</h3>
 			<div class="infobox__bar apartment" data-cost="{{ data.apartment }}">
+				<div class="infobox__slider"><p>50,- </p></div>
 				<span>
 					<div>&euro; {{ data.apartment }},-</div>
 				</span>
@@ -109,6 +111,7 @@
 
 			<h3 class="-h4 -mgt-md">airbnb</h3>
 			<div class="infobox__bar airbnb" data-cost="{{ data.airbnb }}">
+				<div class="infobox__slider"><p>50,- </p></div>
 				<span>
 					<div>&euro; {{ data.airbnb }},-</div>
 				</span>
@@ -289,6 +292,7 @@
 
 			<h3 class="-h4">hotel</h3>
 			<div class="infobox__bar hotel" data-cost="{{ data.hotel }}">
+				<div class="infobox__slider"><p>50,-</p></div>
 				<span>
 					<div>&euro; {{ data.hotel }},-</div>
 				</span>
@@ -296,6 +300,7 @@
 
 			<h3 class="-h4 -mgt-md">apartment</h3>
 			<div class="infobox__bar apartment" data-cost="{{ data.apartment }}">
+				<div class="infobox__slider"><p>50,-</p></div>
 				<span>
 					<div>&euro; {{ data.apartment }},-</div>
 				</span>
@@ -303,6 +308,7 @@
 
 			<h3 class="-h4 -mgt-md">airbnb</h3>
 			<div class="infobox__bar airbnb" data-cost="{{ data.airbnb }}">
+				<div class="infobox__slider"><p>50,- </p></div>
 				<span>
 					<div>&euro; {{ data.airbnb }},-</div>
 				</span>
