--- a/frontend/src/sass/modules/_infobox.scss
+++ b/frontend/src/sass/modules/_infobox.scss
@@ -139,6 +139,7 @@
 	.infobox__bar {
 		border: 2px solid $color-yellow-dark;
 		border-radius: 4px;
+		cursor: pointer;
 		height: 23px;
 		margin-top: 6px;
 		position: relative;
@@ -170,10 +171,34 @@
     
 		}
 
-	}
+		.infobox__slider {
+			background: #58211d;
+			border-radius: 4px;
+			height: 50px;
+			left: 0px;
+			opacity: 0;
+			position: absolute;
+			top: -15px;
+			transition: all .3s;
+			width: 3px;
+			
+			&.active {
+				opacity: 1;
+			}
 
-	.infobox__slider {
-		
+			p {	
+				bottom: -5px;
+				left: 5px;
+				position: absolute;
+				width: 60px;
+			}
+
+			p:before {
+				content: '€';
+			}
+
+		}
+
 	}
 
 	.infobox__list {
