--- a/frontend/src/html/includes/content/filters.html
+++ b/frontend/src/html/includes/content/filters.html
@@ -73,3 +73,10 @@
 	</div>
 
 </div>
+
+<div class="control">
+
+	<button class="control__zoom-in"> <img src="../assets/images/icons/plus.svg" alt="+"> </button>
+	<button class="control__zoom-out"> <img src="../assets/images/icons/min.svg" alt="-"> </button>
+	
+</div>
