--- a/frontend/src/sass/main.scss
+++ b/frontend/src/sass/main.scss
@@ -23,6 +23,7 @@
 @import 'elements/icons';
 @import 'elements/form';
 @import 'elements/modifiers';
+@import 'elements/zoom-button';
 
 // layout elements
 @import 'layout/main';
