MADE STUPID COMPARE FUNCTION

--- a/frontend/src/sass/modules/_infobox.scss
+++ b/frontend/src/sass/modules/_infobox.scss
@@ -187,10 +187,9 @@
 			}
 
 			p {	
-				bottom: -5px;
-				left: 5px;
+				bottom: -2px;
+    			right: 10px;
 				position: absolute;
-				width: 60px;
 			}
 
 			p:before {
