working zoom buttons

--- a/frontend/src/html/includes/content/overlayView.html
+++ b/frontend/src/html/includes/content/overlayView.html
@@ -43,8 +43,8 @@
 			<h1 class="title"> {{ data.name }} </h1>
 		</div>
 		<div class="content">
-			<p class="km"><img src="../assets/images/circleCurrentLarge.svg" class="center__icon"> {{ data.distance }} p.d.</p>
-			<p class="pd"><img src="../assets/images/icons/euro-sm.svg" class="euro__icon"> {{ data.cost }} km</p>
+			<p class="km"><img src="../assets/images/circleCurrentLarge.svg" class="center__icon"> {{ data.distance }} km</p>
+			<p class="pd"><img src="../assets/images/icons/euro-sm.svg" class="euro__icon"> {{ data.cost }} p.d.</p>
 		</div>
 	</section>	
 </template>
